--- a/Todo/Views/TodoItem/Edit.cshtml
+++ b/Todo/Views/TodoItem/Edit.cshtml
@@ -48,7 +48,7 @@
 
 
             <div class="form-group">
-                <label asp-for="ResponsiblePartyId"></label>
+                <label asp-for="ResponsiblePartyId">Task Owner's Email Address</label>
                 @Html.DropDownListFor(
                     m => m.ResponsiblePartyId,
                     dbContext.UserSelectListItems(),
