add icon if logged user is responsible for the list

--- a/Todo/Views/TodoList/Index.cshtml
+++ b/Todo/Views/TodoList/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model Todo.Models.TodoLists.TodoListIndexViewmodel
+@using System.Security.Claims
 
 @{
     ViewData["Title"] = "Lists";
+    var currentUserName = User.Identity.Name;
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -18,6 +20,10 @@
         @foreach (var list in Model.Lists)
         {
             <li class="list-group-item">
+                @if (list.Owner.UserName == currentUserName)
+                {
+                    <span>👤</span>
+                }
                 @if (list.NumberOfNotDoneItems == 0)
                 {
                     <s>
